# code-compass

./: .env.example  .gitignore  .seshat  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  STRUCTURE.md  model-profiles.example.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  seshat-review.md
.claude/: settings.local.json
.codex/skills/: README.md
apps/acp/: README.md  pyproject.toml
apps/acp/scripts/: e2e_smoke.py
apps/acp/src/code_compass_acp/: __init__.py  __main__.py  adk_agent_builder.py  adk_runtime.py  agent.py  bridge.py  chunker.py
apps/acp/src/code_compass_acp/memory/: __init__.py  conflict_resolver.py  env_utils.py  local_memory_qdrant_index.py  local_session_store.py  local_sqlite_store.py  memory_commands.py  memory_decay.py  memory_extractor.py  memory_service.py
apps/acp/src/code_compass_acp/tools/: __init__.py  preload_memory_tool.py  search_code_qdrant_tool.py
apps/acp/tests/: test_bridge_error_reporting.py  test_chunker.py  test_memory_extractor.py  test_smoke_loopback.py
apps/cli/: README.md  TROUBLESHOOTING.md  package.json  pyproject.toml  tsconfig.json
apps/cli/src/: main.ts  mcp-client.ts  ollama.ts  rag.ts  tui.tsx  types.ts  utils.ts
apps/cli/src/code_compass_cli/: app.py  config.py  toad_acp.py  toad_patched.py
apps/docs/: MIGRATION_LOG.md  README.md  next.config.mjs  package.json  pnpm-lock.yaml  theme.config.jsx
apps/indexer/: README.md  (+1 more)
docs/: ARCHITECTURE.md  OPERATIONS.md  ROADMAP.md  STRUCTURE.md  mcp-antigravity.md  mcp-client-quickstart.md
infra/: docker-compose.yml
scripts/: index-all.sh
(+147 files in other folders)
