[project]
name = "code-compass-acp"
version = "0.1.0"
description = "Agente ACP para Code Compass (MCP stdio)"
requires-python = ">=3.12"
readme = "README.md"
authors = [{ name = "Code Compass" }]
license = { text = "UNLICENSED" }
dependencies = [
  "agent-client-protocol @ git+https://github.com/agentclientprotocol/python-sdk.git",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
code-compass-acp = "code_compass_acp.__main__:main"

[tool.uv]
package = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
