[project]
name = "code-compass-cli"
version = "0.1.0"
description = "CLI do Code Compass (ACP + Rich)"
requires-python = ">=3.12"
readme = "README.md"
authors = [{ name = "Code Compass" }]
license = { text = "UNLICENSED" }
dependencies = [
  "agent-client-protocol @ git+https://github.com/agentclientprotocol/python-sdk.git",
  "batrachian-toad; python_version >= '3.14'",
  "rich>=13.7.1",
  "typer>=0.12.3",
  "prompt-toolkit>=3.0.47",
  "pydantic>=2.7.4",
]

[project.scripts]
code-compass = "code_compass_cli.app:app"

[tool.uv]
package = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
